[bug-fixing] - footer top margin for spacing globally - reduheading size for product template - style donation template and select-template with branding

--- a/src/styles/st-albans-theme.scss
+++ b/src/styles/st-albans-theme.scss
@@ -2420,6 +2420,7 @@ img {
 
 // Footer
 .footer {
+  margin-top: $section-spacing;
   padding: $padding * 3 0 $padding;
   background: $purple;
   color: $grey-lt;
